# norg-fmt

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Doxyfile  Makefile  README.md  README.norg  build.zig  meson.build  meson_options.txt
src/: cli.cpp  cli.hpp  logger.cpp  logger.hpp  main.cpp  main.zig  meson.build  state.hpp  traverse.zig
